# ga_cnn

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  defines.cu  defines.cuh  fitness_calculator_gpu.ptx  ga_cnn  main.csv  main.cu  refactor1.csv  version.cuh
args_handler/: args_extractor.cu  args_extractor.cuh  args_handler.cu  args_handler.cuh  args_handler_help.cu  args_handler_help.cuh  args_handler_version.cu  args_handler_version.cuh
build-unix/: ga_cnn
data/: data_loader.cu  data_loader.cuh  data_loader_cpu.cu  data_loader_cpu.cuh  data_loader_gpu.cu  data_loader_gpu.cuh  data_utils.cu  data_utils.cuh  file_loader.cu  file_loader.cuh
genetic/: evolve_population.cu  evolve_population.cuh  evolve_population_cpu.cu  evolve_population_cpu.cuh  evolve_population_gpu.cu  evolve_population_gpu.cuh
info/: device_info.cu  device_info.cuh
network/: fitness_calculator.cu  fitness_calculator.cuh  fitness_calculator_cpu.cu  fitness_calculator_cpu.cuh  fitness_calculator_gpu.cu  fitness_calculator_gpu.cuh  init_networks.cu  init_networks.cuh  init_networks_utils.cu  init_networks_utils.cuh
output/: output_utils.cu  output_utils.cuh
